[package]
name = "blend2d-sys"
version = "0.4.0+blend2d.0.21.1.asmjit.1.20.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2024"
description = "Raw ffi bindings for blend2d"
homepage = "https://github.com/xdbbe/blend2d-rs"
repository = "https://github.com/xdbbe/blend2d-rs"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "blend2d"
exclude = ["blend2d/cmake-build-debug/*"]

[build-dependencies]
bindgen = "0.72"
cc = { version = "1.2", features = ["parallel"] }
